# fimfarchive-operator

./: README.md  loop_config.yaml  pyproject.toml
dataset-configs/: fimfarchive.yaml
src/fimfarchive_operator/: __main__.py  query.py
